Add likes logic to service
