# generated/server/server.gen.go
@@ -1,6 +1,6 @@
 // Package server provides primitives to interact with the openapi HTTP API.
 //
-// Code generated by github.com/oapi-codegen/oapi-codegen/v2 version v2.5.0 DO NOT EDIT.
+// Code generated by github.com/oapi-codegen/oapi-codegen/v2 version v2.5.1 DO NOT EDIT.
 package server
 
 import (
@@ -53,8 +53,8 @@ type ServerInterface interface {
 	// (GET /zones/{zoneID}/analise)
 	GetZonesZoneIDAnalise(ctx echo.Context, zoneID string) error
 	// Add zone to list of favorites
-	// (POST /zones/{zoneID}/like)
-	PostZonesZoneIDLike(ctx echo.Context, zoneID string) error
+	// (POST /zones/{zoneID}/like/{userID})
+	PostZonesZoneIDLikeUserID(ctx echo.Context, zoneID string, userID string) error
 }
 
 // ServerInterfaceWrapper converts echo contexts to parameters.
@@ -94,8 +94,8 @@ func (w *ServerInterfaceWrapper) GetZonesZoneIDAnalise(ctx echo.Context) error {
 	return err
 }
 
-// PostZonesZoneIDLike converts echo context to params.
-func (w *ServerInterfaceWrapper) PostZonesZoneIDLike(ctx echo.Context) error {
+// PostZonesZoneIDLikeUserID converts echo context to params.
+func (w *ServerInterfaceWrapper) PostZonesZoneIDLikeUserID(ctx echo.Context) error {
 	var err error
 	// ------------- Path parameter "zoneID" -------------
 	var zoneID string
@@ -105,8 +105,16 @@ func (w *ServerInterfaceWrapper) PostZonesZoneIDLike(ctx echo.Context) error {
 		return echo.NewHTTPError(http.StatusBadRequest, fmt.Sprintf("Invalid format for parameter zoneID: %s", err))
 	}
 
+	// ------------- Path parameter "userID" -------------
+	var userID string
+
+	err = runtime.BindStyledParameterWithOptions("simple", "userID", ctx.Param("userID"), &userID, runtime.BindStyledParameterOptions{ParamLocation: runtime.ParamLocationPath, Explode: false, Required: true})
+	if err != nil {
+		return echo.NewHTTPError(http.StatusBadRequest, fmt.Sprintf("Invalid format for parameter userID: %s", err))
+	}
+
 	// Invoke the callback with all the unmarshaled arguments
-	err = w.Handler.PostZonesZoneIDLike(ctx, zoneID)
+	err = w.Handler.PostZonesZoneIDLikeUserID(ctx, zoneID, userID)
 	return err
 }
 
@@ -140,6 +148,6 @@ func RegisterHandlersWithBaseURL(router EchoRouter, si ServerInterface, baseURL 
 
 	router.GET(baseURL+"/user/:userID/zones", wrapper.GetUserUserIDZones)
 	router.GET(baseURL+"/zones/:zoneID/analise", wrapper.GetZonesZoneIDAnalise)
-	router.POST(baseURL+"/zones/:zoneID/like", wrapper.PostZonesZoneIDLike)
+	router.POST(baseURL+"/zones/:zoneID/like/:userID", wrapper.PostZonesZoneIDLikeUserID)
 
 }
